added stats to gov

--- a/government.html
+++ b/government.html
@@ -29,6 +29,11 @@
                         <h3>Year 1</h3>
                         <p>Intro to Diplomacy & Global Studies, Sandra Destradi</p>
                     </a>
+                    
+                    <a href="https://www.eventer.co.il/41fsf" class="year-card">
+                        <h3>Year 1</h3>
+                        <p>Statistics, Sheli Wild</p>
+                    </a>
                 </div>
             </div>
         </section>
