--- a/computer-science.html
+++ b/computer-science.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economics & Entrepreneurship Marathon - RRIS</title>
+    <title>Computer Science Marathons - RRIS</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -21,13 +21,18 @@
         <section class="year-selection">
             <div class="container">
                 <a href="index.html" class="back-btn">Back</a>
-                
-                <h1 style="text-align: center; color: white; margin-bottom: 2rem; font-size: 2rem;">Economics & Entrepreneurship Marathon</h1>
-                
+
+                <h1 style="text-align: center; color: white; margin-bottom: 2rem; font-size: 2rem;">Computer Science Marathons</h1>
+
                 <div class="year-grid">
-                    <a href="https://www.eventer.co.il/11fsf" class="year-card">
+                    <a href="https://www.eventer.co.il/7sm7f" class="year-card">
                         <h3>Year 1</h3>
-                        <p>Financial Management & Entr. Finance, Dr. Tal Mofkadi</p>
+                        <p>Calculus</p>
+                    </a>
+
+                    <a href="https://www.eventer.co.il/asm7f" class="year-card">
+                        <h3>Year 1</h3>
+                        <p>Discrete</p>
                     </a>
                 </div>
             </div>
@@ -36,8 +41,8 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 RRIS Marathon Sign-Up. All rights reserved.</p>
+            <p>&copy; 2026 RRIS Marathon Sign-Up. All rights reserved.</p>
         </div>
     </footer>
 </body>
-</html> 
+</html>
