--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">RRIS 2nd Semester Exam Prep Marathons!</h1>
+                <h1 class="hero-title">RRIS Semester A 2025-2026 Exam Prep Marathons!</h1>
                 <p class="hero-subtitle">Hurry and sign up!</p>
                 
                 <div class="subjects-grid">
@@ -30,17 +30,14 @@
                     <a href="government.html" class="subject-btn">
                         <span>Government</span>
                     </a>
-                    <a href="government-sustainability.html" class="subject-btn">
-                        <span>Government & Sustainability</span>
+                    <a href="business.html" class="subject-btn">
+                        <span>Business Administration</span>
                     </a>
                     <a href="business-entrepreneurship.html" class="subject-btn">
                         <span>Business & Entrepreneurship</span>
                     </a>
-                    <a href="business.html" class="subject-btn">
-                        <span>Business</span>
-                    </a>
-                    <a href="economics-entrepreneurship.html" class="subject-btn">
-                        <span>Economics & Entrepreneurship</span>
+                    <a href="computer-science.html" class="subject-btn">
+                        <span>Computer Science</span>
                     </a>
                 </div>
             </div>
@@ -77,7 +74,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 RRIS Marathon Sign-Up. All rights reserved.</p>
+            <p>&copy; 2026 RRIS Marathon Sign-Up. All rights reserved.</p>
         </div>
     </footer>
 </body>
