--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 
                     <div class="term-item">
                         <p><strong>Registration Requirements:</strong></p>
-                        <p>We need 7 students to register and pay in order to open the marathon. Once the marathon is confirmed, the tickets are nonrefundable. If we don't have 7 students registered for the marathon, the marathon will be cancelled and you will receive a refund.</p>
+                        <p>We need 5 students to register and pay in order to open the marathon. Once you purchase, tickets are nonrefundable. If the marathon doesn't pass the 5 student threshold, you will be refunded automatically.</p>
                     </div>
 
                     <div class="term-item">
                         <p><strong>For Reservists:</strong></p>
-                        <p>Reservists attend for free based on which Miluim group you are in. Please contact Lisa Sharon - <a href="mailto:Lisa.sharon@runi.ac.il">Lisa.sharon@runi.ac.il</a>.</p>
+                        <p>Reservists in Miluim groups 2-3 attend for free. Please contact Lisa Sharon - <a href="mailto:Lisa.sharon@runi.ac.il">Lisa.sharon@runi.ac.il</a>.</p>
                     </div>
 
                     <div class="term-item">
                         <p><strong>Marathon Format:</strong></p>
-                        <p>The zoom link for the Marathon will be provided by the tutor in a confirmation email a few days before the Marathon. Marathons will take place on zoom and some have the option for hybrid.</p>
+                        <p>The zoom link for the Marathon will be provided by the tutor in a confirmation email a few days before the Marathon. Marathons will take place on zoom and some have the option for hybrid. For in-class marathons, we will send you an email confirmation with the classroom the day before the marathon.</p>
                     </div>
                 </div>
             </div>
