--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <div class="term-item">
                         <p><strong>Registration Requirements:</strong></p>
-                        <p>We need 5 students to register and pay in order to open the marathon. Once you purchase, tickets are nonrefundable. If the marathon doesn't pass the 5 student threshold, you will be refunded automatically.</p>
+                        <p>We need 5 students to register and pay in order to open the marathon. Tickets are nonrefundable once purchased. If the marathon does not meet the 5-student threshold, only then you will be refunded automatically.</p>
                     </div>
 
                     <div class="term-item">
