--- a/business-entrepreneurship.html
+++ b/business-entrepreneurship.html
@@ -25,8 +25,18 @@
                 <h1 style="text-align: center; color: white; margin-bottom: 2rem; font-size: 2rem;">Business & Entrepreneurship Marathons</h1>
                 
                 <div class="year-grid">
-                    <a href="https://www.eventer.co.il/9sm7f" class="year-card">
+                    <a href="https://www.eventer.co.il/tsm7f" class="year-card">
                         <h3>Year 1</h3>
+                        <p>Math 1</p>
+                    </a>
+
+                    <a href="https://www.eventer.co.il/csm7f" class="year-card">
+                        <h3>Year 1</h3>
+                        <p>Statistics</p>
+                    </a>
+
+                    <a href="https://www.eventer.co.il/9sm7f" class="year-card">
+                        <h3>Year 2</h3>
                         <p>Accounting</p>
                     </a>
 
