--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <div class="term-item">
                         <p><strong>Registration Requirements:</strong></p>
-                        <p>We need 5 students to register and pay in order to open the marathon. Tickets are nonrefundable once purchased. If the marathon does not meet the 5-student threshold, only then you will be refunded automatically.</p>
+                        <p>Marathons cost 120 NIS, and we require a minimum of 5 paying students to open the marathon. Tickets are non-refundable once purchased. If the marathon does not meet the 5 paying student threshold, it will be canceled, and you will receive a refund. However, failure to show up to a marathon that has not been canceled will not entitle you to a refund.</p>
                     </div>
 
                     <div class="term-item">
