--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <div class="term-item">
                         <p><strong>Marathon Format:</strong></p>
-                        <p>The zoom link for the Marathon will be provided by the tutor in a confirmation email a few days before the Marathon. Marathons will take place on zoom and some have the option for hybrid. For in-class marathons, we will send you an email confirmation with the classroom the day before the marathon.</p>
+                        <p>Marathons are 5 hours long. The classroom and or zoom link for the Marathon will be provided by the tutor the night before the Marathon.</p>
                     </div>
                 </div>
             </div>
